--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SignalR Chat</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Optional: Use SignalR CDN -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@5.0.12/dist/browser/signalr.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@5.0.12/dist/browser/signalr.min.js"></script>
 
 </head>
 <body>
