--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SignalR Chat</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Optional: Use SignalR CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@5.0.12/dist/browser/signalr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/signalr/2.4.3/jquery.signalR.min.js"></script>
 
 </head>
 <body>
@@ -81,7 +81,7 @@
     </div>
 
     <!-- SignalR JavaScript -->
- <script src="https://unpkg.com/@microsoft/signalr@8.0.0/dist/browser/signalr.min.js"></script>
+<!--  <script src="https://unpkg.com/@microsoft/signalr@8.0.0/dist/browser/signalr.min.js"></script> -->
     <script src="chat.js"></script>
 </body>
 </html>
